/+ add new cards

--- a/index.html
+++ b/index.html
@@ -64,39 +64,57 @@
 <button id="getCard">Get Card</button>
 <script>
 // Simulated array of cards with directory (type), and name
+
 const cards = [
   { dir: "assets/choices", name: "Bear trap.png", type: "Choice" },
-  { dir: "assets/choices", name: "Maintenance-1.png", type: "Choice" },
+  { dir: "assets/choices", name: "Flood Warning.png", type: "Choice" },
+  { dir: "assets/choices", name: "Local Festival.png", type: "Choice" },
+  { dir: "assets/choices", name: "Loose Load.png", type: "Choice" },
   { dir: "assets/choices", name: "Maintenance.png", type: "Choice" },
+  { dir: "assets/choices", name: "Maintenance.png", type: "Choice" },
+  { dir: "assets/choices", name: "Mechanical Marvel.png", type: "Choice" },
   { dir: "assets/choices", name: "Shortcut.png", type: "Choice" },
-  { dir: "assets/choices", name: "Slow Vehicle.png", type: "Choice" },
-  { dir: "assets/choices", name: "empty freeway.png", type: "Choice" },
-  { dir: "assets/choices", name: "flood.png", type: "Choice" },
+  { dir: "assets/choices", name: "Tornado watch.png", type: "Choice" },
+  { dir: "assets/choices", name: "Trucker's Luck.png", type: "Choice" },
+  { dir: "assets/events", name: "Alligator.png", type: "Event" },
+  { dir: "assets/events", name: "Alligator.png", type: "Event" },
   { dir: "assets/events", name: "Brake Failure.png", type: "Event" },
   { dir: "assets/events", name: "CB rambo.png", type: "Event" },
+  { dir: "assets/events", name: "Call from home.png", type: "Event" },
+  { dir: "assets/events", name: "Call from home.png", type: "Event" },
+  { dir: "assets/events", name: "Cheese wagon.png", type: "Event" },
+  { dir: "assets/events", name: "Chicken Coop inspection.png", type: "Event" },
   { dir: "assets/events", name: "Chicken Coop inspection.png", type: "Event" },
   { dir: "assets/events", name: "Drunk Driver.png", type: "Event" },
-  { dir: "assets/events", name: "Exhaustion-1.png", type: "Event" },
-  { dir: "assets/events", name: "Exhaustion-2.png", type: "Event" },
-  { dir: "assets/events", name: "Exhaustion.png", type: "Event" },
+  { dir: "assets/events", name: "Heavy Traffic.png", type: "Event" },
   { dir: "assets/events", name: "Labor Laws.png", type: "Event" },
-  { dir: "assets/events", name: "Malfunction-1.png", type: "Event" },
   { dir: "assets/events", name: "Malfunction.png", type: "Event" },
-  { dir: "assets/events", name: "Pickle Park-1.png", type: "Event" },
   { dir: "assets/events", name: "Pickle Park.png", type: "Event" },
-  { dir: "assets/events", name: "Property 1=icy road.png", type: "Event" },
-  { dir: "assets/events", name: "Radio chatter.png", type: "Event" },
+  { dir: "assets/events", name: "Steep Grade Ahead.png", type: "Event" },
+  { dir: "assets/events", name: "Steep Grade Ahead.png", type: "Event" },
   { dir: "assets/events", name: "Sudden Malfunction.png", type: "Event" },
-  { dir: "assets/events", name: "Traffic-1.png", type: "Event" },
-  { dir: "assets/events", name: "collision-1.png", type: "Event" },
+  { dir: "assets/events", name: "Sunny Day.png", type: "Event" },
+  { dir: "assets/events", name: "Sunny Day.png", type: "Event" },
+  { dir: "assets/events", name: "Sunny Day.png", type: "Event" },
+  { dir: "assets/events", name: "Toll Booth Blunder.png", type: "Event" },
+  { dir: "assets/events", name: "Traffic.png", type: "Event" },
+  { dir: "assets/events", name: "Traffic.png", type: "Event" },
+  { dir: "assets/events", name: "Traffic.png", type: "Event" },
+  { dir: "assets/events", name: "Traffic.png", type: "Event" },
+  { dir: "assets/events", name: "Unexpected Detour.png", type: "Event" },
+  { dir: "assets/events", name: "Unexpected Detour.png", type: "Event" },
+  { dir: "assets/events", name: "Wildlife crossing.png", type: "Event" },
+  { dir: "assets/events", name: "Wildlife crossing.png", type: "Event" },
   { dir: "assets/events", name: "collision.png", type: "Event" },
-  { dir: "assets/events", name: "deadline.png", type: "Event" },
-  { dir: "assets/events", name: "minor malfunction.png", type: "Event" },
+  { dir: "assets/events", name: "collision.png", type: "Event" },
+  { dir: "assets/events", name: "icy road.png", type: "Event" },
   { dir: "assets/events", name: "mountain pass.png", type: "Event" },
   { dir: "assets/events", name: "sudden storm.png", type: "Event" },
-  { dir: "assets/events", name: "tornado.png", type: "Event" },
-  { dir: "assets/events", name: "traffic.png", type: "Event" },
-  { dir: "assets/events", name: "windstorm.png", type: "Event" }
+  { dir: "assets/events", name: "sudden storm.png", type: "Event" },
+  { dir: "assets/events", name: "windstorm.png", type: "Event" },
+  { dir: "assets/events", name: "“Coffee”.png", type: "Event" },
+  { dir: "assets/events", name: "“Coffee”.png", type: "Event" },
+  { dir: "assets/events", name: "“Coffee”.png", type: "Event" }
 ];
 const capitalizeWords = str => str.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1)).join(' ');
 
